WW-5532 Upgrade and align various dependencies

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -229,6 +229,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>compile</scope>
             <optional>true</optional>
         </dependency>
 
