--- a/plugins/testng/pom.xml
+++ b/plugins/testng/pom.xml
@@ -35,6 +35,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
