--- a/plugins/junit/pom.xml
+++ b/plugins/junit/pom.xml
@@ -52,6 +52,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
