--- a/plugins/rest/pom.xml
+++ b/plugins/rest/pom.xml
@@ -58,6 +58,7 @@
         <dependency>
             <groupId>org.apache.juneau</groupId>
             <artifactId>juneau-marshall</artifactId>
+            <version>8.1.3</version>
             <optional>true</optional>
         </dependency>
 
