--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -174,6 +174,11 @@
 
         <dependency>
             <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-jasperreports7-plugin</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.struts</groupId>
             <artifactId>struts2-jfreechart-plugin</artifactId>
         </dependency>
 
