--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -88,6 +88,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.struts</groupId>
+                <artifactId>struts2-jasperreports7-plugin</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.struts</groupId>
                 <artifactId>struts2-javatemplates-plugin</artifactId>
                 <version>${project.version}</version>
             </dependency>
