--- a/.asf.yaml
+++ b/.asf.yaml
@@ -19,7 +19,7 @@ github:
       # contexts are the names of checks that must pass.
       required_status_checks:
         contexts:
-          - build
+          - "Build and Test (JDK 17)"
       required_pull_request_reviews:
         # it does not work because our github teams are private/secret, see INFRA-25666
         require_code_owner_reviews: false
@@ -28,7 +28,7 @@ github:
       # contexts are the names of checks that must pass.
       required_status_checks:
         contexts:
-          - build
+          - "Build and Test (JDK 17)"
       required_pull_request_reviews:
         # it does not work because our github teams are private/secret, see INFRA-25666
         require_code_owner_reviews: false
