--- a/.asf.yaml
+++ b/.asf.yaml
@@ -24,11 +24,11 @@ github:
         # it does not work because our github teams are private/secret, see INFRA-25666
         require_code_owner_reviews: false
         required_approving_review_count: 0
-    release/struts-6-7-x:
+    release/*:
       # contexts are the names of checks that must pass.
       required_status_checks:
         contexts:
-          - "Build and Test (JDK 17)"
+          - "Build and Test (JDK 8)"
       required_pull_request_reviews:
         # it does not work because our github teams are private/secret, see INFRA-25666
         require_code_owner_reviews: false
