--- a/pom.xml
+++ b/pom.xml
@@ -288,12 +288,9 @@
                         <useIdeaDefaultExcludes>true</useIdeaDefaultExcludes>
                         <useDefaultExcludes>true</useDefaultExcludes>
                         <addDefaultLicenseMatchers>false</addDefaultLicenseMatchers>
-                        <licenses>
-                            <license implementation="org.apache.rat.analysis.license.ApacheSoftwareLicense20" />
-                        </licenses>
-                        <licenseFamilies>
-                            <licenseFamily implementation="org.apache.rat.license.Apache20LicenseFamily" />
-                        </licenseFamilies>
+                        <approvedLicenses>
+                            <approvedLicense>AL</approvedLicense>
+                        </approvedLicenses>
                         <includes>
                             <include>pom.xml</include>
                             <include>src/**</include>
