--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>7.1.1-SNAPSHOT</version>
+        <version>7.1.1</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
