--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-bom</artifactId>
-        <version>7.1.1</version>
+        <version>7.1.1-SNAPSHOT</version>
         <relativePath>../bom/pom.xml</relativePath>
     </parent>
 
