--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@
         <ognl.version>3.3.5</ognl.version>
         <slf4j.version>2.0.17</slf4j.version>
         <spring.version>6.2.12</spring.version>
+        <struts-annotations.version>2.0</struts-annotations.version>
         <velocity-tools.version>3.1</velocity-tools.version>
         <weld.version>6.0.3.Final</weld.version>
 
