--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -44,7 +44,7 @@
             <dependency>
                 <groupId>org.apache.struts</groupId>
                 <artifactId>struts-annotations</artifactId>
-                <version>2.0</version>
+                <version>${struts-annotations.version}</version>
             </dependency>
 
             <dependency>
@@ -143,7 +143,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.19.0</version>
+                <version>3.20.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
