--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,3 +18,4 @@ updates:
       - dependency-name: "org.eclipse.jetty:jetty-maven-plugin"
       - dependency-name: "com.github.ben-manes.caffeine:caffeine"
       - dependency-name: "com.sun.xml.bind:jaxb-impl"
+      - dependency-name: "javax.portlet:portlet-api"
