--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,4 @@ updates:
       - dependency-name: "com.sun.xml.bind:jaxb-impl"
       - dependency-name: "javax.portlet:portlet-api"
       - dependency-name: "javax.servlet:javax.servlet-api"
+      - dependency-name: "javax.servlet.jsp:jsp-api"
