--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,3 +21,4 @@ updates:
       - dependency-name: "javax.portlet:portlet-api"
       - dependency-name: "javax.servlet:javax.servlet-api"
       - dependency-name: "javax.servlet.jsp:jsp-api"
+      - dependency-name: "org.mortbay.jetty:jsp-2.1"
