--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,3 +32,4 @@ updates:
       - dependency-name: "org.springframework:spring-core"
       - dependency-name: "org.apache.struts:struts-annotations"
       - dependency-name: "org.apache.juneau:juneau-marshall"
+      - dependency-name: "org.apache.tomcat:tomcat-api"
